[package]
name = "comic-es"
version = "0.1.0"
authors = ["TriLy <lmtkg1992@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies
[dependencies]
hyper = { version = "0.14", features = ["full", "server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15"
flate2 = "1.0"
urlencoding = "2.1"